# plugin-system-rs

./: Cargo.toml
embedder/: Cargo.toml  build.rs
embedder/src/: lib.rs
embedder/src/proto/: values.proto
proto/: .gitignore  Cargo.toml
proto/src/proto/: values.proto
wasm-plugin/: Cargo.toml  Makefile
wasm-plugin/global_add/: Cargo.toml
wasm-plugin/global_add/src/: lib.rs
wasm-plugin/protobuf_io/: Cargo.toml
wasm-plugin/protobuf_io/src/: lib.rs
wasm-plugin/src/: lib.rs
